--- a/mario/css/style.css
+++ b/mario/css/style.css
@@ -9,6 +9,7 @@
   margin: 0 auto;
   border: 1px solid black;
   background: url('../images/start-screen.png');
+  background-color: "pink"
   position: relative;
 }
 
